fix: Header causing page resize on mobile

--- a/elyreacts/src/components/styles/Header.module.scss
+++ b/elyreacts/src/components/styles/Header.module.scss
@@ -26,7 +26,7 @@ header.wrapper {
     }
 }
 header.wrapper .container {
-    position: absolute;
+    position: fixed;
     box-sizing: border-box;
     top: 0;
     left: 0;
